force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Cod_Arancelario__c.field-meta.xml
<CustomField>
    <fullName>Cod_Arancelario__c</fullName>
    <formula>Nombre_Cod_Arancelario__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod Arancelario</label>
    <type>Text</type>
</CustomField>