force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Cod_Postal_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Cod_Postal_Vendedor__c</fullName>
    <label>Cod Postal Vendedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>