force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Consignatario__c</fullName>
    <label>Consignatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>