force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Consignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Email__c</fullName>
    <label>Consignee Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>