force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Consignee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Phone__c</fullName>
    <label>Consignee Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>