force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/DIP_Confecionada__c.field-meta.xml
<CustomField>
    <fullName>DIP_Confecionada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DIP Confecionada</label>
    <type>Checkbox</type>
</CustomField>