force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Direccion_Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Consignatario__c</fullName>
    <label>Dirección Consignatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>