force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Dolar_Dia__c.field-meta.xml
<CustomField>
    <fullName>Dolar_Dia__c</fullName>
    <label>Dolar Día</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>