force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Estado_Aduana__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aduana__c</fullName>
    <label>Estado Aduana</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aforo Físico</fullName>
            </value>
            <value>
                <fullName>Libre</fullName>
            </value>
            <value>
                <fullName>Retención</fullName>
            </value>
            <value>
                <fullName>SAG</fullName>
            </value>
            <value>
                <fullName>Declaración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>