force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Estado_Guia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Guia__c</fullName>
    <label>Estado Guía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documental</fullName>
            </value>
            <value>
                <fullName>Menor a 30</fullName>
            </value>
            <value>
                <fullName>Facturada</fullName>
            </value>
            <value>
                <fullName>Abandonado</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>