force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Master_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Master_Importacion__c</fullName>
    <label>Master Importación</label>
    <referenceTo>Master_Importacion__c</referenceTo>
    <relationshipLabel>Detalles Guías Importación</relationshipLabel>
    <relationshipName>Detalles_Gu_as_Importaci_n</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>