force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Monto_Facturado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Facturado__c</fullName>
    <label>Monto Facturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>