force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Monto_por_Facturar__c.field-meta.xml
<CustomField>
    <fullName>Monto_por_Facturar__c</fullName>
    <label>Monto por Facturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>