force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Nombre_Cod_Arancelario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cod_Arancelario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre Cod Arancelario</label>
    <referenceTo>Codigo_Arancelario__c</referenceTo>
    <relationshipLabel>Detalles Guías Importación</relationshipLabel>
    <relationshipName>Detalles_Gu_as_Importaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>