force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Pais_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Origen</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipName>Detalles_Gu_as_Importaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>