force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Pais_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Pais_Vendedor__c</fullName>
    <label>País Vendedor</label>
    <length>3</length>
    <type>Text</type>
</CustomField>