force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Pieces__c.field-meta.xml
<CustomField>
    <fullName>Pieces__c</fullName>
    <label>Pieces</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>