force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Postal_Services__c.field-meta.xml
<CustomField>
    <fullName>Postal_Services__c</fullName>
    <label>Postal Services</label>
    <length>15</length>
    <type>Text</type>
</CustomField>