force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Puerto_de_Destino__c.field-meta.xml
<CustomField>
    <fullName>Puerto_de_Destino__c</fullName>
    <label>Puerto de Destino</label>
    <length>3</length>
    <type>Text</type>
</CustomField>