force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <label>Seguro</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>