force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Shipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Code__c</fullName>
    <label>Shipment Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>