force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Shipper_Town__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Town__c</fullName>
    <label>Shipper Town</label>
    <length>25</length>
    <type>Text</type>
</CustomField>