force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Type_of_Mail__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Mail__c</fullName>
    <label>Type of Mail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registrado</fullName>
            </value>
            <value>
                <fullName>No Registrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>