force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Undelivered_Parcels__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Parcels__c</fullName>
    <label>Undelivered Parcels</label>
    <length>15</length>
    <type>Text</type>
</CustomField>