force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Valija__c.field-meta.xml
<CustomField>
    <fullName>Valija__c</fullName>
    <label>Valija</label>
    <referenceTo>Valija__c</referenceTo>
    <relationshipLabel>Detalles Guías Importación</relationshipLabel>
    <relationshipName>Detalles_Guias_Importaci_n</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>