force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>