force-app/main/default/objects/Detalles_Guias_Importacion__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>